<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/home_screen_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent"
        android:padding="@dimen/indosat_widget_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/evolvotel_widget_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/indosat_widget_text_padding"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/widget_heading_text_size" />

        <LinearLayout
            android:id="@+id/top_row_apps_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/evolvotel_widget_heading"
            android:layout_margin="@dimen/indosat_widget_margin"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app1"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/mycare" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/app1_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app2"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/dompetku" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/app2_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app3"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/spotify" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/app3_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app4"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/icloud" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/app4_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_row_apps_ll"
            android:orientation="horizontal"
            android:padding="@dimen/indosat_widget_margin" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app5"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/cipika_store" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/app5_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app6"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/bbm" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/app6_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app7"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/duel_otak" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/app7_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app8"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:src="@drawable/facebook" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:text="@string/app8_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_row_apps_transparent_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/evolvotel_widget_heading"
            android:orientation="horizontal"
            android:padding="@dimen/indosat_widget_margin" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app1_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app2_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app3_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app4_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_row_apps_ll"
            android:orientation="horizontal"
            android:padding="@dimen/indosat_widget_margin" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app5_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app6_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app7_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/indosat_widget_margin"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/widget_app8_transparent"
                    android:layout_width="@dimen/app_icon_img_size"
                    android:layout_height="@dimen/app_icon_img_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/indosat_widget_margin"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="@dimen/app_name_lable_size"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/widget_app_names_text_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
